2004-09-26  Roland Illig  <roland.illig@gmx.de>

	* pipethrough.c: #include <string.h> to compile on Solaris.
	* util.h (convert_controls): Adjusted the comment to what the
	function really does.

2004-09-26  Mike Gorchak  <mike@malva.ua>

	* key.c (qansi_key_defines[]): Add support for qansi-m terminals.
	Needed on QNX Neutrino. (correct_key_code): Likewise.

2004-09-25  Roland Illig  <roland.illig@gmx.de>

	* pipethrough.c: Added pipethrough, a function to execute child
	processes in a simple way.
	* pipethrough.h: The interface for the function.
	* pipethrough.3: The manpage (will be installed in maintainer-mode).
	* Makefile.am: Added the files to SRCS.

2004-09-25  Roland Illig  <roland.illig@gmx.de>

	* view.c (display): Recognize "+\bo" as a list item in nroff mode.
	Display "_\b_" correctly in both colors.

	* view.c (hex_search): Added const qualifier.
	* boxes.c (display_unit): Likewise.
	* command.c (examine_cd): Likewise. Additionally used g_strdup to
	not accidentally modify an environment variable.
	* complete.c (command_completion_function): Likewise.
	(filename_completion_function): Likewise. (try_complete): Likewise.
	(variable_completion_function): Likewise.
	* file.c (check_hardlinks): Likewise.
	* find.c (find_do_view_edit): Likewise. (find_file): Likewise.
	* global.h (home_dir): Likewise.
	* main.c (get_parent_dir_name): Likewise. (init_xterm_support):
	Likewise. (OS_Setup): Likewise.
	* menu.c (create_menu): Likewise.
	* mountlist.c (xatoi): Likewise. (read_filesystem_list): Likewise.
	* poptconfig.c (poptReadDefaultConfig): Likewise.
	* popthelp.c (showHelpIntro): Likewise.
	* rxvt.c (look_for_rxvt_extensions): Likewise.
	* slint.c (has_colors): Likewise.
	* subshell.c (check_sid): Likewise.
	* user.c (check_format_var): Likewise.
	* widget.c (radio_callback): Likewise.

2004-09-25  Pavel Shirshov  <pavelsh@mail.ru>

	* boxes.c (configure_vfs): g_free handles NULL argument too,
        no need for the comparison.